--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 
 I am currently a PhD student at the university of Duisburg-Essen. I am interested in interactions between algebraic geometry and homotopy theory.
+EDIT
 
 
 <!-- <div class="posts">
