--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title: Home
 ---
 
-I am currently a PhD student at the university of Duisburg-Essen. I am interested in interactions between algebraic geometry and homotopy theory.
+<< Under construction >>
+
+I am a PhD student at the university of Duisburg-Essen. I am interested in interactions between algebraic geometry and homotopy theory.
 
 
 <!-- <div class="posts">
