--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@ layout: default
 title: Home
 ---
 
-<< Under construction >>  /
-
-
+<< Under construction >>  \
 
 I am a PhD student at the university of Duisburg-Essen. I am interested in interactions between algebraic geometry and homotopy theory.
 
