--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@ title: Home
 
 << Under construction >>  <br/>
 <br/>
-I am a PhD student in the faculty of mathematics at the university of Duisburg-Essen. I am interested in interactions between algebraic geometry and homotopy theory. <br/> 
+I am currently a postdoctoral researcher at the University of Zurich. I am interested in interactions between algebraic geometry and homotopy theory. <br/> 
 <br/>
 More specifically I work in 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smmoth schemes. <br/> 
 In my PhD research I consider invariants for schemes defined using the machinery of this category, mostly lying in the Grothendieck-Witt ring of the base field. Those refine integer-valued enumerative geometry invarinats. I use them to gather information about singularities of schemes. 
 
+Here is a link to a preprint based on my PhD thesis
 
 <!-- <div class="posts">
   {% for post in paginator.posts %}
