--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ I am interested in interaction between homotopy theory and algebraic geoemtry. M
 In my PhD research I consider invariants for schemes defined using the machinery of this category, mostly lying in the Grothendieck-Witt ring of the base field. Those refine integer-valued enumerative geometry invarinats. I use them to gather information about singularities of schemes. 
 
 Here is a link to a preprint based on my PhD thesis
+<a href="https://arxiv.org/abs/2101.02686">preprint</a>
 
 <!-- <div class="posts">
   {% for post in paginator.posts %}
