--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ I am currently a postdoctoral researcher at the University of Zurich, in Joseph 
 I am interested in interaction between homotopy theory and algebraic geoemtry. More specifically I work in 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smmoth schemes. <br/> 
 In my PhD research I consider invariants for schemes defined using the machinery of this category, mostly lying in the Grothendieck-Witt ring of the base field. Those refine integer-valued enumerative geometry invarinats. I use them to gather information about singularities of schemes. 
 
-Here is a link to a preprint based on my PhD thesis
+
+Here is a 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
+based on my PhD thesis
 
 <!-- <div class="posts">
   {% for post in paginator.posts %}
