--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 << Under construction >>  <br/>
 <br/>
-I am currently a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. <br/> 
+I am a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. <br/> 
 <br/>
 I am interested in interaction between homotopy theory and algebraic geoemtry. More specifically I work in 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smmoth schemes. <br/> 
 In my PhD research I consider invariants for schemes defined using the machinery of this category, mostly lying in the Grothendieck-Witt ring of the base field. Those refine integer-valued enumerative geometry invarinats. I use them to gather information about singularities of schemes. 
