--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 << Under construction >>  <br/>
 <br/>
-I am a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. Next Year I am going to be a postdoc at Pris Nord, in Yonatan Harpaz's group. <br/> 
+I am a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. My next postdoc position will be at Paris Nord University, in Yonatan Harpaz's group. <br/> 
 <br/>
 I am interested in interactions between homotopy theory and algebraic geoemtry. I work in the framework of 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smmoth schemes. <br/> 
 In particular I am interested in information we can gather from different motivic invariants in the study of singularities. In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; those refine integer-valued invariants from enumerative geometry.  
