--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ title: Home
 <br/>
 I am a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. My next postdoc position will be at Paris Nord University, in Yonatan Harpaz's group. <br/> 
 <br/>
-I am interested in interactions between homotopy theory and algebraic geoemtry. I work in the framework of 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smmoth schemes. <br/> 
-In particular I am interested in information we can gather from different motivic invariants in the study of singularities. In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; those refine integer-valued invariants from enumerative geometry.  
+I am interested in interactions between homotopy theory and algebraic geometry. I work in the framework of 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smooth schemes. <br/> 
+In particular I am interested in information we can gather from different motivic invariants for the study of singularities. In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; those refine integer-valued invariants from enumerative geometry.  
 <br/>
 
 Here is a 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
-based on my PhD thesis, in which I prove a local formula refining an algebraic-geomterical version of Milnor's formula fo singularities.
+based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
 
 <!-- <div class="posts">
   {% for post in paginator.posts %}
