--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher at the University of Zurich, in Joseph Ayoub's research group. Before that I was a PhD student at the University of Duisburg-Essen in Marc Levine's group. My next postdoc position (2023) will be at Paris Nord University, in Yonatan Harpaz's group. <br/> 
+I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord, in the working group of <a href=https://www.math.univ-paris13.fr/~harpaz/">Yonatan Harpaz<\a>. 
+Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub's research group<\a>. Before that I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group<\a>.  <br/> 
 <br/>
-I am interested in interactions between homotopy theory and algebraic geometry. I work in the framework of 'A^1-homotopy theory' which allows one to consider 'motivic spectra', a category of a homotopic nature encompassing all (A^1-invariant, Nisnevich local) cohomology theories on smooth schemes. <br/> 
-In particular I am interested in information we can gather from different motivic invariants for the study of singularities. In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; those refine integer-valued invariants from enumerative geometry.  
+I am interested in interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
+I am interested in information one can gather from different motivic invariants for the study of singularities.
+In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
 
 Here is a 
