--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord, in the working group of <a href=https://www.math.univ-paris13.fr/~harpaz/">Yonatan Harpaz<\a>. 
-Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub's research group<\a>. Before that I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group<\a>.  <br/> 
+I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord, in the working group of <a href=https://www.math.univ-paris13.fr/~harpaz/">Yonatan Harpaz</a>. 
+Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub's research group</a>. Before that I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 I am interested in interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
