--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ based on my PhD thesis, in which I prove a local formula refining an algebraic-g
 Here is a 
 <a href="https://arxiv.org/abs/2208.14440">preprint</a>
 on defining motivic Euler classes for singular varieties.
+<br/>
+
+A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
+<br/>
+
+A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
+
+
+
 
 
 <!-- <div class="posts">
