--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@ I am interested in information one can gather from different motivic invariants 
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
 
-Here is a 
+<ul>
+<li> Here is a 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
 based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
-<br/>
+<br/> <\li>
 
-
+<li>
 Here is a 
 <a href="https://arxiv.org/abs/2208.14440">preprint</a>
 on defining motivic Euler classes for singular varieties.
-<br/>
+<br/> <\li>
 
+  <li>
 A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
-<br/>
+<br/> <\li>
 
-A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
-
+<\li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
+<\li>
+  
+  <\ul>
 
 
 
