--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@ In my research I combine the machinery of nearby cycles with the study of invari
 <li> Here is a 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
 based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
-<br/> <\li>
+<br/> </li>
 
 <li>
 Here is a 
 <a href="https://arxiv.org/abs/2208.14440">preprint</a>
 on defining motivic Euler classes for singular varieties.
-<br/> <\li>
+<br/> </li>
 
   <li>
 A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
-<br/> <\li>
+<br/> </li>
 
-<\li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
-<\li>
+<li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
+</li>
   
-  <\ul>
+  </ul>
 
 
 
