--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ I am interested in information one can gather from different motivic invariants 
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
 
-<ul> Projects:
+<ul> Some projects:
   
 <li> Here is a 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
