--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Home
 ---
 
 <br/>
-I am a mathematics postdoctoral researcher at the LAGA Laboratoire, Université Sorbonne Paris Nord, in the working group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
-Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Before that I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
+I am a postdoctoral researcher of maths at the LAGA Laboratoire, Université Sorbonne Paris Nord, as part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
+Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
-I am interested in interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
+My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
