--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher of maths at the LAGA Laboratoire, Université Sorbonne Paris Nord, as part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
+I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
@@ -26,10 +26,10 @@ on defining motivic Euler classes for singular varieties.
 <br/> </li>
 
   <li>
-A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
+A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz Theorem for motives.
 <br/> </li>
 
-<li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, is on Hermitian trace formulas for singularity categories.
+<li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, on Hermitian trace formulas for singularity categories.
 </li>
   
   </ul>
