--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ on defining motivic Euler classes for singular varieties.
 A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz Theorem for motives.
 <br/> </li>
 
-<li> A work in progress with  <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>, <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and others, on Hermitian trace formulas for singularity categories.
+<li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
 </li>
   
   </ul>
