--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ I am interested in information one can gather from different motivic invariants 
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
 
-<ul> Some projects:
+<ul> Some projects I'm working on:
   
 <li> A 
 <a href="https://arxiv.org/abs/2101.02686">preprint</a>
@@ -34,6 +34,7 @@ A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> i
   
   </ul>
 
+Feel free to ntact me if you have similar interests or would like to know more, in firstname at math dot univ-paris13 dot fr.
 
 
 
