--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> i
   
   </ul>
 
-Feel free to ntact me if you have similar interests or would like to know more, in firstname at math dot univ-paris13 dot fr.
+Feel free to contact me if you have similar interests or would like to know more. My email is firstname at math dot univ-paris13 dot fr.
 
 
 
