--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ In my research I combine the machinery of nearby cycles with the study of invari
 <ul> Some projects I'm working on:
   
 <li> A 
-<a href="https://arxiv.org/abs/2101.02686">preprint</a>
+<a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768">paper/a>
 based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
 <br/> </li>
 
@@ -26,7 +26,11 @@ on defining motivic Euler classes for singular varieties.
 <br/> </li>
 
   <li>
-A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz Theorem for motives.
+A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
+<br/> </li>
+
+    <li>
+A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico</a> is about motivic and real DT invariants.
 <br/> </li>
 
 <li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
