--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ In my research I combine the machinery of nearby cycles with the study of invari
 <ul> Some projects I'm working on:
   
 <li> A 
-<a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768">paper/a>
+<a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768">paper</a>
 based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
 <br/> </li>
 
