--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ on defining motivic Euler classes for singular varieties.
 <br/> </li>
 
   <li>
-A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> is on the Picard Lefschetz formula for motives.
+A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> on the Picard Lefschetz formula for motives.
 <br/> </li>
 
     <li>
-A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico</a> is about motivic and real DT invariants.
+A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico</a> about motivic and real DT invariants.
 <br/> </li>
 
 <li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
