--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> o
 <br/> </li>
 
     <li>
-A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico</a> about motivic and real DT invariants.
+A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico Guelerman</a> about motivic and real DT invariants.
 <br/> </li>
 
 <li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
