--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
+I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord, and in IMJ-PRG at Université Paris-Cité. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
@@ -16,7 +16,7 @@ In my research I combine the machinery of nearby cycles with the study of invari
   
 <li> A 
 <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768">paper</a>
-based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities.
+based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities (Journal of Algebra, 2025).
 <br/> </li>
 
 <li>
@@ -35,6 +35,10 @@ A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/esp
 
 <li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
 </li>
+
+  <li> A work in progress with  <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>, on motivic invariants of morphism pairs (a one level higher version of the quadratic Euler characteristic)
+</li>
+
   
   </ul>
 
