--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher of mathematics at the LAGA Laboratoire, Université Sorbonne Paris Nord, and the IMJ-PRG at Université Paris-Cité. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
+I am a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
@@ -42,7 +42,7 @@ A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/esp
   
   </ul>
 
-Feel free to contact me if you have similar interests or would like to know more. My email is firstname at math dot univ-paris13 dot fr.
+Feel free to contact me if you have similar interests or would like to know more. My email is firstname dot lastname at imj-prg dot fr.
 
 
 
