--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <br/>
 I am a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
-Before that I was a postdoc at the University of Zurich, in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
+Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group at the University of Zurich. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
@@ -36,7 +36,7 @@ A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/esp
 <li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
 </li>
 
-  <li> A work in progress with  <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>, on motivic invariants of morphism pairs (a one level higher version of the quadratic Euler characteristic)
+  <li> A work in progress with <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>, on motivic invariants of morphism pairs (a one level higher version of the quadratic Euler characteristic).
 </li>
 
   
