--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ on defining motivic Euler classes for singular varieties.
 <br/> </li>
 
   <li>
-A work in progress with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> on the Picard Lefschetz formula for motives.
+A <a href="https://arxiv.org/abs/2510.12762">preprint</a>, with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> on the Picard Lefschetz formula for motives.
 <br/> </li>
 
     <li>
