--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ In my research I combine the machinery of nearby cycles with the study of invari
 based on my PhD thesis, in which I prove a local formula refining an algebraic-geomteric version of the Milnor formula on singularities (Journal of Algebra, 2025).
 <br/> </li>
 
+  <li>
+A <a href="https://arxiv.org/abs/2510.12762">preprint</a> on the Picard Lefschetz formula for motives (with with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a>).
+<br/> </li>
+  
 <li>
 A
 <a href="https://arxiv.org/abs/2208.14440">preprint</a>
 on defining motivic Euler classes for singular varieties.
-<br/> </li>
-
-  <li>
-A <a href="https://arxiv.org/abs/2510.12762">preprint</a>, with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a> on the Picard Lefschetz formula for motives.
 <br/> </li>
 
     <li>
