--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ In my research I combine the machinery of nearby cycles with the study of invari
 
 <ul> Some projects I'm working on:
   
-<li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities<\a>, based on my PhD thesis (Journal of Algebra, 2025).
+<li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities</a>, based on my PhD thesis (Journal of Algebra, 2025).
 <br/> </li>
 
   <li>
-A <a href="https://arxiv.org/abs/2510.12762">preprint</a> on the Picard Lefschetz formula for motives, joint with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a>).
+A preprint on the <a href="https://arxiv.org/abs/2510.12762">Picard--Lefschetz formula for motives</a>, joint with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a>).
 <br/> </li>
   
 <li>
 A
 preprint
-on defining <a href="https://arxiv.org/abs/2208.14440">motivic Euler classes for singular varieties<\a>.
+on defining <a href="https://arxiv.org/abs/2208.14440">motivic Euler classes for singular varieties</a>.
 <br/> </li>
 
     <li>
