--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ I am interested in information one can gather from different motivic invariants 
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
 <br/>
 
-<ul> Some projects I'm working on:
+<ul> Projects I've been working on:
   
 <li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities</a>, based on my PhD thesis (Journal of Algebra, 2025).
 <br/> </li>
