--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@ Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayo
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
 In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
+Some projects:
 <br/>
-
-<ul> Projects I've been working on:
   
 <li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities</a>, based on my PhD thesis (Journal of Algebra, 2025).
 <br/> </li>
@@ -31,10 +30,10 @@ on defining <a href="https://arxiv.org/abs/2208.14440">motivic Euler classes for
 A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico Guelerman</a> about motivic and real DT invariants.
 <br/> </li>
 
-<li> A work in progress with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>, on trace formula for singularity categories with duality.
+<li> A work in progress on a trace formula for singularity categories with duality, with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>.
 </li>
 
-  <li> A work in progress with <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>, on motivic invariants of morphism pairs (a one level higher version of the quadratic Euler characteristic).
+  <li> A work in progress on a higher quadratic Euler characteristic, with <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>.
 </li>
 
   
