--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayo
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
-In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry.  
-Some projects:
+In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry. Some projects:
 <br/>
   
 <li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities</a>, based on my PhD thesis (Journal of Algebra, 2025).
@@ -27,7 +26,7 @@ on defining <a href="https://arxiv.org/abs/2208.14440">motivic Euler classes for
 <br/> </li>
 
     <li>
-A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico Guelerman</a> about motivic and real DT invariants.
+A work in progress about motivic and real DT invariants, with <a href=https://web.mathi.uni-heidelberg.de/physmath/espreafico/>Felipe Espreafico Guelerman</a>.
 <br/> </li>
 
 <li> A work in progress on a trace formula for singularity categories with duality, with  <a href=https://nielsfeld.wixsite.com/website/>Niels Feld</a>, <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>,  <a href=https://tmoulinos.com/>Tasos Moulinos</a>, and  <a href=https://simon-pepin.github.io/>Simon Pepin Lehalleur</a>.
@@ -39,7 +38,7 @@ A work in progress with <a href=https://web.mathi.uni-heidelberg.de/physmath/esp
   
   </ul>
 
-Feel free to contact me if you have similar interests or would like to know more. My email is firstname dot lastname at imj-prg dot fr.
+You are welcome to contact me if you have similar interests or would like to know more. My email is firstname dot lastname at imj-prg dot fr.
 
 
 
