--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ In my research I combine the machinery of nearby cycles with the study of invari
 <br/> </li>
 
   <li>
-A preprint on the <a href="https://arxiv.org/abs/2510.12762">Picard--Lefschetz formula for motives</a>, joint with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a>).
+A preprint on the <a href="https://arxiv.org/abs/2510.12762">Picard--Lefschetz formula for motives</a>, joint with <a href=https://www.emiljacobsen.se/>Emil Jacobsen</a>.
 <br/> </li>
   
 <li>
