--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ A work in progress about motivic and real DT invariants, with <a href=https://we
   <li> A work in progress on a higher quadratic Euler characteristic, with <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>.
 </li>
 
+  <li> <a href=https://arxiv.org/abs/2511.07668>Here</a> there are expository notes on computing motivic nearby cycles and their monodromy at a singular point, witten for the PCMI 2024 volume.
+</li>
+
   
   </ul>
 
