--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <br/>
-I am a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord. I am part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
+Most recently I was a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord, as part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group at the University of Zurich. Even before, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
 My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
@@ -35,7 +35,9 @@ A work in progress about motivic and real DT invariants, with <a href=https://we
   <li> A work in progress on a higher quadratic Euler characteristic, with <a href=https://shmckean.github.io/>Stephen McKean</a>, <a href=https://anubhavn.github.io/>Anubhav Nanavaty</a>, and  <a href=https://sites.google.com/view/jessepajwani/Jesse-Pajwani>Jesse Pajwani</a>.
 </li>
 
-  <li> <a href=https://arxiv.org/abs/2511.07668>Here</a> there are expository notes on computing motivic nearby cycles and their monodromy at a singular point, witten for the PCMI 2024 volume.
+  <li> Expository notes on computing <a href=https://arxiv.org/abs/2511.07668>motivic nearby cycles and their monodromy at a singular point</a>, written for the PCMI 2024 volume.
+</li>
+
 </li>
 
   
