--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 layout: default
 title: Home
 ---
-
+I do research in Maths. My interests lie around interactions between homotopy theory and algebraic geometry, in particular in the setting of motivic homotopy theory.
 <br/>
 Most recently I was a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord, as part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group at the University of Zurich. Even before that, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
-My interests lie around interactions between homotopy theory and algebraic geometry, in particular within the setting of motivic homotopy theory. <br/> 
 I am interested in information one can gather from different motivic invariants for the study of singularities.
-In my research I combine the machinery of nearby cycles with the study of invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry. Some projects:
+I study degenerations and invariants for schemes lying in the Grothendieck-Witt ring of the base field; these invariants refine integer-valued invariants of enumerative geometry. Some projects:
 <br/>
   
 <li> A <a href="https://www.sciencedirect.com/science/article/pii/S0021869324006768"> motivic refinement for the Milnor formula on quasi-homogeneous singularities</a>, based on my PhD thesis (Journal of Algebra, 2025).
