--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-I do research in Maths. My interests lie around interactions between homotopy theory and algebraic geometry, in particular in the setting of motivic homotopy theory.
+I do research in maths. My interests lie around interactions between homotopy theory and algebraic geometry, in particular in the setting of motivic homotopy theory.
 Most recently I was a postdoctoral researcher of mathematics at the IMJ-PRG at Université Paris-Cité, and the LAGA Laboratoire, Université Sorbonne Paris Nord, as part of the group of <a href=https://www.math.univ-paris13.fr/~harpaz/>Yonatan Harpaz</a>. 
 Before that I was a postdoc in <a href=http://user.math.uzh.ch/ayoub/>Joseph Ayoub</a>'s research group at the University of Zurich. Even before that, I was a PhD student at the University of Duisburg-Essen in <a href=https://www.esaga.uni-due.de/ag/levine/members/>Marc Levine's group</a>.  <br/> 
 <br/>
